got a pallete going on finally, need to fix spacing on breakpoints

--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@ html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: rgb(245, 245, 245);
+  background-color: #1f2234;
 }
 
 .container {
-  margin: 80px auto 0 auto;
-  max-width: 1200px;
+  margin: 150px auto 0 auto;
+  max-width: 1600px;
 }
 
 a {
@@ -21,14 +21,6 @@ a {
   transform: 'translate(-50%, -50%)';
 }
 
-.grid-list {
-  width: 500;
-  height: 450;
-}
-
-.grid-container {
-  display: 'flex';
-  flex-wrap: 'wrap';
-  justify-content: 'space-around';
-  overflow: 'hidden';
+.list-widget {
+  height: 400px;
 }
